# location-sharing-app

./: .gitignore  CLAUDE.md  PRD.md  PROJECT_STATUS.md  README.md  SETUP_AND_TESTING_GUIDE.md  STRESS_TESTING_IMPLEMENTATION_PLAN.md  SYSTEM_DESIGN.md  TECHNICAL_SPEC.md  docker-compose.test.yml  docker-compose.yml  reset_database.sh  run.sh  run_elixir_flutter.sh  run_rust_flutter.sh  setup_flutter_devices.sh  start_api_server.sh  start_elixir_server.sh  start_flutter_app.sh  start_flutter_app_elixir.sh  start_websocket_server.sh
backend_elixir/: .env.example  .gitignore  Dockerfile  README.md  mix.exs  verify_implementation.md
backend_elixir/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
backend_elixir/lib/: location_sharing.ex  location_sharing_web.ex
backend_elixir/lib/location_sharing/: application.ex  guardian.ex  mailer.ex  prom_ex.ex  redis.ex.backup  repo.ex
backend_elixir/lib/location_sharing_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
backend_elixir/priv/repo/: seeds.exs
backend_elixir/test/location_sharing/: redis_test.exs
backend_elixir/test/support/: conn_case.ex  data_case.ex  factory.ex
backend_rust/: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.api-server  Dockerfile.websocket-server  Makefile  README.md  dev.sh  docker-compose.yml
backend_rust/api-server/: Cargo.toml
backend_rust/api-server/src/: config.rs  error.rs  main.rs  metrics.rs
backend_rust/api-server/src/database/: postgres.rs
backend_rust/api-server/src/handlers/: mod.rs  participants.rs  sessions.rs
backend_rust/api-server/src/middleware/: cors.rs
backend_rust/api-server/src/models/: mod.rs  participant.rs  session.rs
backend_rust/api-server/tests/: integration_tests.rs
backend_rust/migrations/: 001_initial.sql
backend_rust/shared/: Cargo.toml
backend_rust/shared/src/: config.rs  error.rs  lib.rs  types.rs  utils.rs
backend_rust/websocket-server/: Cargo.toml
backend_rust/websocket-server/src/: error.rs  main.rs
backend_rust/websocket-server/src/auth/: jwt.rs
backend_rust/websocket-server/src/handlers/: websocket.rs
backend_rust/websocket-server/src/redis/: client.rs
k8s/: README.md  deploy.sh
k8s/elixir/: deployment.yaml  hpa.yaml
k8s/infrastructure/: namespace.yaml  postgresql.yaml
k8s/monitoring/: grafana.yaml  prometheus.yaml
mobile_app/: .env.example  .gitignore  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  README.md  pubspec.yaml
mobile_app/android/: gradle.properties  local.properties  local.properties.example
mobile_app/android/app/: build.gradle
mobile_app/ios/: Podfile
mobile_app/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
mobile_app/ios/Runner/: GeneratedPluginRegistrant.m  Info.plist
mobile_app/lib/: app.dart  main.dart
mobile_app/lib/config/: app_config.dart  theme.dart
mobile_app/lib/core/: constants.dart  extensions.dart  utils.dart
mobile_app/lib/models/: location.dart  participant.dart  session.dart
mobile_app/lib/providers/: location_provider.dart  participants_provider.dart  session_provider.dart
mobile_app/lib/screens/: create_session_screen.dart  home_screen.dart  join_session_screen.dart  map_screen.dart
mobile_app/lib/services/: api_service.dart  location_service.dart  storage_service.dart  websocket_service.dart
mobile_app/lib/widgets/: map_widget.dart  participant_avatar.dart  session_controls.dart
mobile_app/test/: unit_test.dart  widget_test.dart
monitoring/prometheus/: prometheus.yml
stress-tests/: README.md  compare-backends.sh  diagnose.sh  quick-test.sh  run-comprehensive-tests.sh  run-tests.sh  setup-check.sh  test-fixed.sh
(+47 files in other folders)
