[workspace]
resolver = "2"
members = [
    "api-server",
    "websocket-server", 
    "shared"
]

[workspace.dependencies]
# Core async runtime and frameworks
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# Database and persistence
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Authentication and security
jsonwebtoken = "9.2"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Configuration and environment
config = "0.14"
dotenvy = "0.15"

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
futures-util = "0.3"
bytes = "1.5"

# Metrics and monitoring
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"