[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Local dependencies
shared = { path = "../shared" }

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
tempfile = "3.8"