[package]
name = "websocket-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }

# Additional dependencies
url = "2.5"
http = "1.0"

# Local dependencies
shared = { path = "../shared" }